[package]
name = "Rust-Kucoin-Trader-Engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
tungstenite = {version = "0.16.0", features = ["native-tls"]}
tokio-tungstenite = {version="0.16.1",features=["native-tls"]}
tokio = {varsion="1.15.0",features = ["full"]}
reqwest = "0.11.9"
url = "2.2.2"
serde =  { version = "1.0.134", features = ["derive"] }
serde_derive = "1.0.134"
serde_json = "1.0.75"
futures-util = "0.3.19"
chrono = "0.4.19"
hmac = "0.12.0"
sha2 = "0.10.1"
base64 = "0.13.0"
digest = "0.10.1"
ring = "0.16.20"